objects/BBEventRegistration__c.object
<CustomObject>
    <description>Child table to hold BBEvent registration details</description>
    <fields>
        <fullName>BBEventToRegister__c</fullName>
        <label>BBEvent</label>
        <referenceTo>BBEvent__c</referenceTo>
        <relationshipLabel>BBEventRegistrations</relationshipLabel>
        <relationshipName>BBEventRegistrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Eventregistree__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BBContact</label>
        <referenceTo>BBContact__c</referenceTo>
        <relationshipLabel>BBEventRegistrations</relationshipLabel>
        <relationshipName>BBEventRegistrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day1:Session A 10:00AM-12:00PM</fullName>
                </value>
                <value>
                    <fullName>Day1:Session B 12:30PM-01:30PM</fullName>
                </value>
                <value>
                    <fullName>Day1:Session C 01:30PM-03:00PM</fullName>
                </value>
                <value>
                    <fullName>Day2:Session D 09:00AM-10:30AM</fullName>
                </value>
                <value>
                    <fullName>Day2:Session E 11:00AM-01:00PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BBEventRegistration</label>
    <nameField>
        <label>BBEventRegistration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BBEventRegistrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>